# deponent

./: .dockerignore  .gitignore  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  SPEC.md  TRADEMARKS.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
canaries/: CANARIES.md
deponent/: __init__.py  badge.py  cell.py  claims.py  conform.py  conformance.py  gate.py  jail.py  ledger.py  operator_attest.py  playground.py  profiles.py  reach.py  receipts.py  reconcile.py  selfgate.py  sworn_adapter.py
deponent/adapters/: __init__.py  contract.py  deponent.py  sworn.py
docs/: demo.cast
examples/: backends.py  custom_tool.py  demo.py  governed_team.py  minimal.py  safetyspine_action_governor.py
examples/playground/: mixed.json  rogue.json  well_behaved.json
tests/: test_badge.py  test_cell.py  test_claims.py  test_conformance.py  test_gate.py  test_jail.py  test_jail_backends.py  test_ledger.py  test_operator_attest.py  test_playground.py  test_profiles.py  test_reach.py  test_receipts.py  test_reconcile.py  test_selfgate.py
